mcp-macros/tests/ui/mcp_server_missing_name.stderr
error: Server name is required. Use #[mcp_server(name = "Your Server Name")]
 --> tests/ui/mcp_server_missing_name.rs:3:1
  |
3 | #[mcp_server] // Missing required name parameter
  | ^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `mcp_server` (in Nightly builds, run with -Z macro-backtrace for more info)
